public static class PlayerAnimator
{
    public static class States
    {
        public const string Idle = "Idle";
        public const string Jump = "Jump";
        public const string Slide = "Slide";
        public const string Salto = "Salto";        
        public const string Burn = "Burn";
        public const string Electrify = "Electrify";
        public const string Disappear = "Disappear";
    }
}    